# UAV_simulator_ArduCopter

./: README.md
ardupilot_gazebo/launch/: iris_arducopter.launch  iris_arducopter_pavement.launch  iris_world.launch  iris_world_pavement.launch
ardupilot_gazebo/models/DVS_Camera/: model.config  model.sdf
ardupilot_gazebo/worlds/: iris_arducopter_zed.world  iris_arducopter_zed_pavement.world
ecatkin_ws/devel/: .catkin  local_setup.sh
ecatkin_ws/img_seg_cnn/: CMakeLists.txt  package.xml  vgg_unet_predict.py
image_folder_publisher/scripts/: image_folder_publisher.py
iris_coastline/: CMakeLists.txt  package.xml  teleop_key.py
iris_coastline/launch/: iris_coastline.launch  spawn_drone.launch
iris_coastline/worlds/: iris_coastline.world.xacro
iris_gazebo/: CMakeLists.txt  package.xml
iris_gazebo/launch/: heightmap.launch  iris_empty_world.launch  iris_heightmap.launch  spawn_drone.launch
iris_gazebo/worlds/: heightmap.world
iris_navigation/: CMakeLists.txt  navigation.rviz  package.xml
iris_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
iris_navigation/launch/: move_base.launch
iris_navigation/scripts/: cmd_vel_to_mavros.py
lfd/: CMakeLists.txt  control_testing.py  image_converter.py  key.launch  keyboard_with_cv.launch  package.xml  tryimcon.py  vsc_uav.py  vsc_uav_v1.py  vsc_uav_v2.py  vsc_uav_v3.py  vsc_uav_v4.py  vsc_uav_v5.py
lfd/msg/: VSCdata.msg
scripts/: start_coast_det.sh  start_stereo_proc.sh  start_stereo_view.sh  startgz.sh  startgz_pavement.sh  startmavros.sh  startsitl.sh
(+126 files in other folders)
