<?xml version="1.0"?>
<package format="2">
  <name>iris_gazebo</name>
  <version>0.0.0</version>
  <description>The iris_gazebo package</description>

  <maintainer email="fotis@todo.todo">fotis</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>


  <export>

  </export>
</package>
